# GeoGraduate

./: geo_graduates.html  main.py  notebook.ipynb  pyproject.toml  requirements.txt
