[project]
name = "geograduate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.19.5",
    "gspread>=6.2.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "streamlit-ext>=0.1.15",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.43.2",
]
